--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "track-display",
   "private": true,
   "dependencies": {
-    "@rails/webpacker": "^3.4.3",
+    "@rails/webpacker": "3.4",
     "vue": "^2.5.16",
     "vue-loader": "^15.0.0-rc.2",
     "vue-template-compiler": "^2.5.16"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.1.3"
+    "webpack-dev-server": "2.11.2"
   }
 }
