--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.4",
+    "chartkick": "^2.3.5",
+    "highcharts": "^6.1.0",
     "vue": "^2.5.16",
-    "vue-loader": "^15.0.0-rc.2",
+    "vue-loader": "^14.2.2",
     "vue-template-compiler": "^2.5.16"
   },
   "devDependencies": {
