--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -11,10 +11,16 @@ test:
     POSTGRESQL_USER: postgres
     POSTGRESQL_HOST: postgresql
     POSTGRESQL_PORT: '5432'
+    ELASTICSEARCH_URL: http://elasticsearch:9200
   links:
   - postgresql
+  - elasticsearch
 postgresql:
   image: postgres:9.4.5
   environment:
     POSTGRES_USER: postgres
     POSTGRES_PASSWORD: ''
+elasticsearch:
+  image: docker.elastic.co/elasticsearch/elasticsearch:6.2.4
+  environment:
+    - xpack.security.enabled=false
