feat(measures_sync): add service for measures synchronization

--- a/.env.development
+++ b/.env.development
@@ -16,3 +16,4 @@ CONTACT_TIME=5
 ELASTICSEARCH_URL=localhost:9200
 WOLKE_API_URL=http://platanus.wolke-services.com/platanusintfinstant?
 WOLKE_TOKEN=
+SYNCRONIZATION_INTERVAL=
