--- a/.env.development
+++ b/.env.development
@@ -14,6 +14,6 @@ DEVISE_SECRET_KEY=
 SIDEKIQ_CONCURRENCY=5
 CONTACT_TIME=5
 ELASTICSEARCH_URL=localhost:9200
-WOLKE_API_URL=http://platanus.wolke-services.com/platanusintfinstant?
+WOLKE_API_URL=http://platanus.wolke-services.com
 WOLKE_TOKEN=
 SYNCRONIZATION_INTERVAL=
