--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -9,7 +9,7 @@ production:
   measures_sync:
     cron: '0 */15 * * * *' # runs every 15 minutes
     class: MeasuresSyncJob
-  measures_sync:
+  weight_measures_sync:
     cron: '0 0 * * * *' # runs every 1 hour
     class: WeightMeasuresSyncJob  #  an_scheduled_task:
   #    cron: '0 * * * * *'  # Runs once per minute
