--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.4",
-    "chartkick": "^2.3.5",
     "highcharts": "^6.1.0",
     "vue": "^2.5.16",
+    "vue-chartkick": "^0.4.0",
+    "vue-i18n": "^8.0.0",
     "vue-loader": "^14.2.2",
     "vue-template-compiler": "^2.5.16"
   },
