--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "vue-chartkick": "^0.4.0",
     "vue-i18n": "^8.0.0",
     "vue-loader": "^14.2.2",
-    "vue-template-compiler": "^2.5.16"
+    "vue-template-compiler": "^2.5.16",
+    "vuetify": "^1.0.19"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
