--- a/.env.development
+++ b/.env.development
@@ -14,6 +14,7 @@ DEVISE_SECRET_KEY=
 SIDEKIQ_CONCURRENCY=5
 CONTACT_TIME=5
 ELASTICSEARCH_URL=localhost:9200
-WOLKE_API_URL=http://platanus.wolke-services.com
+WOLKE_MEASURE_URL=http://platanus.wolke-services.com/platanusintfinstant?
+WOLKE_WEIGHT_MEASURES_URL=http://platanus.wolke-services.com/platanusintfweighing?
 WOLKE_TOKEN=
 SYNCRONIZATION_INTERVAL=
