--- a/.env.development
+++ b/.env.development
@@ -17,4 +17,5 @@ ELASTICSEARCH_URL=localhost:9200
 WOLKE_MEASURE_URL=http://platanus.wolke-services.com/platanusintfinstant?
 WOLKE_WEIGHT_MEASURES_URL=http://platanus.wolke-services.com/platanusintfweighing?
 WOLKE_TOKEN=
-SYNCRONIZATION_INTERVAL=
+SYNCHRONIZATION_INTERVAL=15
+SYNCHRONIZATION_CRON_INTERVAL='0 */15 * * * *'
