--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "vue-chartkick": "^0.4.0",
     "vue-i18n": "^8.0.0",
     "vue-loader": "^14.2.2",
+    "vue-multiselect": "^2.1.0",
     "vue-template-compiler": "^2.5.16",
     "vuetify": "^1.0.19"
   },
