--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "vue": "^2.5.16",
     "vue-chartkick": "^0.4.0",
     "vue-flatpickr-component": "^7.0.4",
+    "vue-highcharts": "0.0.10",
     "vue-i18n": "^8.0.0",
     "vue-loader": "^14.2.2",
     "vue-multiselect": "^2.1.0",
