--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vuetify": "^1.0.19"
   },
   "devDependencies": {
+    "eslint-plugin-vue": "^4.7.1",
     "webpack-dev-server": "2.11.2"
   }
 }
