--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "highcharts": "^6.1.0",
     "vue": "^2.5.16",
     "vue-chartkick": "^0.4.0",
+    "vue-clickaway": "^2.2.2",
     "vue-flatpickr-component": "^7.0.4",
     "vue-highcharts": "0.0.10",
     "vue-i18n": "^8.0.0",
