--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.4",
+    "date-fns": "^1.29.0",
     "highcharts": "^6.1.0",
     "vue": "^2.5.16",
     "vue-chartkick": "^0.4.0",
