--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue-loader": "^14.2.2",
     "vue-multiselect": "^2.1.0",
     "vue-template-compiler": "^2.5.16",
-    "vuetify": "^1.0.19"
+    "vuetify": "^1.0.19",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "eslint-plugin-vue": "^4.7.1",
