--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -4,7 +4,8 @@ production:
   - default
   - es_index
 :limits:
-  es_index: 1
+  default: 3
+  es_index: 2
 :schedule:
   measures_sync:
     cron: <%= ENV.fetch("SYNCHRONIZATION_CRON_INTERVAL", '0 */15 * * * *') %> # runs every 15 minutes
