--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "eslint-plugin-vue": "^4.7.1",
     "webpack-dev-server": "2.11.2"
+  },
+  "engines": {
+    "node": "10.15.3"
   }
 }
